--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,5 @@ cess:
   username: cexy
   email: cess@gmail.com
   password_digest:  <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
